@@ -26,7 +26,8 @@ gateway = 10.6.7.1
 # auto-create | auto-download
 image-missing-action = auto-create
 
-[selenium]
+[web]
+protocol = http
 video = 0
 record-all = 1
 
