@@ -712,84 +712,6 @@ sub disableNAT # (iface, sourceAddr)
                    "-o $iface -s $sourceAddr -j MASQUERADE");
 }
 
-# Method: executeSelenium
-#
-#   Overriden method that executes Selenium.
-#
-# Parameters:
-#
-#   jar - String with the path of the selenium jar.
-#   browser - String with the web browser to be used.
-#   url - String with the url of the web we want to test.
-#   testFile - String with the filename of the Selenium test suite.
-#   resultFile - String with the filename of the Selenium results to be saved.
-#
-# Returns:
-#
-#   boolean - true if execution was ok, false otherwise
-#
-# Exceptions:
-#
-#   <ANSTE::Exceptions::MissingArgument> - throw if argument not present
-#
-sub executeSelenium # (%params)
-{
-    my ($self, %params) = @_;
-
-    exists $params{jar} or
-        throw ANSTE::Exceptions::MissingArgument('jar');
-    exists $params{browser} or
-        throw ANSTE::Exceptions::MissingArgument('browser');
-    exists $params{url} or
-        throw ANSTE::Exceptions::MissingArgument('url');
-    exists $params{testFile} or
-        throw ANSTE::Exceptions::MissingArgument('testFile');
-    exists $params{resultFile} or
-        throw ANSTE::Exceptions::MissingArgument('resultFile');
-
-    my $jar = $params{jar};
-    my $browser = $params{browser};
-    my $url = $params{url};
-    my $testFile = $params{testFile};
-    my $resultFile = $params{resultFile};
-
-    my $config = ANSTE::Config->instance();
-
-    my $firefoxProfile = $config->seleniumFirefoxProfile();
-    my $profileOption = '';
-    if ($firefoxProfile) {
-        $profileOption = "-firefoxProfileTemplate \"$firefoxProfile\"";
-    }
-
-    my $date = `date +%y%m%d%H%M%S`;
-    chomp($date);
-    my $LOG =  "/tmp/anste-selenium-$date.log";
-
-    my $singleWindow = $config->seleniumSingleWindow();
-    my $windowLayout = '-multiWindow';
-    if ($singleWindow) {
-        $windowLayout = "-singleWindow";
-    }
-
-    my $userExtensions = $config->seleniumUserExtensions();
-
-    my $cmd = "java -jar $jar -avoidProxy -htmlSuite \"$browser\"  "
-            . "\"$url\" \"$testFile\" \"$resultFile\" "
-            . "-userExtensions $userExtensions "
-            . "$windowLayout $profileOption > $LOG 2>&1";
-
-
-    my $ld_path = '';
-    my @browserSplit = split(/ /, $browser);
-    if ($browserSplit[1]) {
-        my $browserPath = dirname($browserSplit[1]);
-        $ld_path = "LD_LIBRARY_PATH=$browserPath ";
-    }
-
-    print STDERR "Selenium command: $cmd\n" if ($config->verbose());
-    return $self->execute($ld_path . $cmd);
-}
-
 # Method: startVideoRecording
 #
 #   Overriden method that returns the command that should
